# Rust_Web_Development

./: .dockerignore  .env.dockerfile  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile_0  Dockerfile_1  Readme.md  Session.vim  build.rs  cliff.toml  docker-compose.yml  log4rs.yaml  questions.json  request.hurl  requests.http  setup.toml
.github/workflows/: build-tests.yaml  create-app.yaml  docker_image.yaml  unit-tests.yaml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20231127155356_answers_table.up.sql  20231220134429_create_accounts_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  error.rs.BAK  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs
