workspace = { members = ["mock-server"] }
[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
handle-errors = { path = "handle-errors", version = "0.1.0" }
mock-server = { path = "mock-server", version = "0.1.0" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.2", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
] }
reqwest = { version = "0.11.22", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
rand = "0.8.5"
rust-argon2 = "2.0.0"
paseto = "2.0.2"
chrono = "0.4.31"
dotenv = "0.15.0"
clap = { version = "4.4.18", features = ["derive"] }
proc-macro2 = "1.0.78"
openssl = { version = "0.10.63", features = ["vendored"] }
# ______________________________________________________________________
watch = "0.2.3"
criterion = "0.5.1"

[build-dependencies]
platforms = "2.0.0"
